<resources>
    <string name="app_name">MaChatGun</string>
    <string name="login_button">Already have account</string>
    <string name="signup_button">Create Account</string>
    <string name="login_label">Login</string>
    <string name="login">Login</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="signup_label">Create account</string>
    <string name="enter_display_name">Display Name</string>
    <string name="sign_up">Sign up</string>
    <string name="logout_menu">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="change_picture">Change Picture</string>
    <string name="change_status">Change Status</string>
    <string name="status_label">Status</string>
    <string name="update_status">Update Status</string>
    <string name="send_message">Send Message</string>
    <string name="bar_username_chat">Name</string>
</resources>